startuphire.com (archived on 2010-09-21)
{
  "alexa_rank": 97933,
  "analysis_subcorpus": true,
  "categories": "jobrelated",
  "char_count": 6072,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 15.69,
  "homepage_snapshot_redirected_domain": "startuphire.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100926090440id_/http://www.startuphire.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100926090440id_/http%3A//startuphire.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "startuphire.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100921130222id_/http%3A//www.startuphire.com/privacy",
  "policy_title": "StartUpHire - Privacy Policy",
  "policy_url": "startuphire.com/privacy",
  "sha1": "696bbb0eace3bca4206249c8c67e7d1579ea049d",
  "simhash": 2032942153584205484,
  "simhash_updated": false,
  "site_hostname": "startuphire.com",
  "site_url": "http://startuphire.com",
  "smog": 16.73,
  "strict_updated": false,
  "timestamp": "20100921130222",
  "word_count": 953,
  "year": 2010
}

--- a/s/st/sta/startuphire.com.html
+++ b/s/st/sta/startuphire.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the startuphire.com privacy policy that was archived on 2010-05-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100529025751id_/http%3A//www.startuphire.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the startuphire.com privacy policy that was archived on 2010-09-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100921130222id_/http%3A//www.startuphire.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -52,7 +52,7 @@
 	</div>
 	<div id="navBlock">
 		<div id="supportLinks">
-						<a href="/blog">Blog</a>
+			<a href="/blog">Blog</a>
 			<a href="/help/">FAQ</a>
 			<a href="/preferences">Preferences</a>
 			<a href="" class="signIn">Sign In</a>		</div>
@@ -105,9 +105,9 @@
 			<div class="jobReviewFoot"></div>
 						<div class="footer">
 				<div style="margin: 0px">&nbsp;</div>
-				<p><a href="/about/">About Us</a>|<a href="/partners/">Partners</a>|<a href="/directory">Browse Jobs</a>|<a href="/privacy/">Privacy Policy</a>|<a href="/terms/">Terms of Use</a>|<a href="/contact/">Contact Us</a><br>
+				<div><a href="/about/">About Us</a>|<a href="/partners/">Partners</a>|<h2><a href="/directory">Browse Jobs</a></h2>|<a href="/privacy/">Privacy Policy</a>|<a href="/terms/">Terms of Use</a>|<a href="/contact/">Contact Us</a><br>
 					<span class="copyright">© 2010 StartUpHire LLC</span>
-				</p>
+				</div>
 			</div>
 			<!-- Start of HubSpot Logging Code  -->
 						<script type="text/javascript" language="javascript">
