--- a/k/ko/kom/komp3.net.html
+++ b/k/ko/kom/komp3.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the komp3.net privacy policy that was archived on 2010-06-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100626063000id_/http%3A//www.komp3.net/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the komp3.net privacy policy that was archived on 2010-09-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100921134526id_/http%3A//www.komp3.net/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 <title>KOmp3.net Where Mp3 Downloads Were Born</title>
@@ -10,13 +10,9 @@
 <meta name="description" content="KOmp3.net Where Mp3 Downloads Were Born">
 <meta name="keywords" content="KOmp3.net Where Mp3 Downloads Were Born">
 <meta name="Robots" content="index,follow,all">
-<meta name="verify-v1" content="nY1VgNIZfIN4XFmlGcX9AUxVahbdhuqtHtn91sNWksA=">
-</head>
+<meta name="verify-v1" content="nY1VgNIZfIN4XFmlGcX9AUxVahbdhuqtHtn91sNWksA="></head>
 <body>
 <div class="content">
-	<div class="banner_728">
-		<iframe src="http://www.komp3.net/banners/728x90.html" width="728" height="90" scrolling="no" frameborder="0"></iframe>
-	</div>
 	
 	<div class="liniutza_sus"></div>
 	
@@ -67,13 +63,13 @@
 							<div class="latest_albums_album_holder">
 								<div class="latest_albums_album_holder_sus"></div>
 								<div class="latest_albums_album_holder_content small">
-									<a href="http://www.komp3.net/albums.html" class="normal bold" title="Download Shakira - She-Wolf (Live FIFA World Cup 2010 Opening Concert Video) album">Shakira</a>
+									<a href="http://www.komp3.net/albums.html" class="normal bold" title="Download VA - Ibiza Progressive Tunes 2010 album">VA</a>
 									<br>
-									<a href="http://www.komp3.net/albums.html" class="small" title="Download Shakira - She-Wolf (Live FIFA World Cup 2010 Opening Concert Video) album">She-Wolf (Live FI..</a>
+									<a href="http://www.komp3.net/albums.html" class="small" title="Download VA - Ibiza Progressive Tunes 2010 album">Ibiza Progressive..</a>
 										<br>
-										<a href="http://www.komp3.net/albums.html" class="small" title="Download Shakira - She-Wolf (Live FIFA World Cup 2010 Opening Concert Video) album"><img src="http://web.tiscali.it/filemediaxtractor/albumingz/Shakira - She-Wolf (Live FIFA World Cup 2010 Opening Concert).jpg" width="95px" height="95px" alt="Download Shakira - She-Wolf (Live FIFA World Cup 2010 Opening Concert Video) album mp3" border="0"></a>									
+										<a href="http://www.komp3.net/albums.html" class="small" title="Download VA - Ibiza Progressive Tunes 2010 album"><img src="http://web.tiscali.it/filemediaxtractor/albumingz/VA - Ibiza Progressive Tunes 2010.jpg" width="95px" height="95px" alt="Download VA - Ibiza Progressive Tunes 2010 album mp3" border="0"></a>									
 									<br>
-									2010-06-26
+									2010-09-21
 								</div>
 								<div class="latest_albums_album_holder_jos"></div>							
 							</div>										
@@ -81,13 +77,13 @@
 							<div class="latest_albums_album_holder">
 								<div class="latest_albums_album_holder_sus"></div>
 								<div class="latest_albums_album_holder_content small">
-									<a href="http://www.komp3.net/albums.html" class="normal bold" title="Download Shakira - Hips Dont Lie (Live FIFA World Cup 2010 Opening Concert Video) album">Shakira</a>
+									<a href="http://www.komp3.net/albums.html" class="normal bold" title="Download VA - Hitzone 55 2010 - 2 CDs album">VA</a>
 									<br>
-									<a href="http://www.komp3.net/albums.html" class="small" title="Download Shakira - Hips Dont Lie (Live FIFA World Cup 2010 Opening Concert Video) album">Hips Dont Lie (Li..</a>
+									<a href="http://www.komp3.net/albums.html" class="small" title="Download VA - Hitzone 55 2010 - 2 CDs album">Hitzone 55 2010 -..</a>
 										<br>
-										<a href="http://www.komp3.net/albums.html" class="small" title="Download Shakira - Hips Dont Lie (Live FIFA World Cup 2010 Opening Concert Video) album"><img src="http://web.tiscali.it/filemediaxtractor/albumingz/Shakira - Hips Dont Lie (Live FIFA World Cup 2010 Opening Concert).jpg" width="95px" height="95px" alt="Download Shakira - Hips Dont Lie (Live FIFA World Cup 2010 Opening Concert Video) album mp3" border="0"></a>									
+										<a href="http://www.komp3.net/albums.html" class="small" title="Download VA - Hitzone 55 2010 - 2 CDs album"><img src="http://web.tiscali.it/filemediaxtractor/albumingz/VA - Hitzone 55 2010 - 2 CDs.jpg" width="95px" height="95px" alt="Download VA - Hitzone 55 2010 - 2 CDs album mp3" border="0"></a>									
 									<br>
-									2010-06-26
+									2010-09-21
 								</div>
 								<div class="latest_albums_album_holder_jos"></div>							
 							</div>										
@@ -95,13 +91,13 @@
 							<div class="latest_albums_album_holder">
 								<div class="latest_albums_album_holder_sus"></div>
 								<div class="latest_albums_album_holder_content small">
-									<a href="http://www.komp3.net/albums.html" class="normal bold" title="Download Green Day - Last Of The American Girls (Video 2010) album">Green Day</a>
+									<a href="http://www.komp3.net/albums.html" class="normal bold" title="Download VA - House Vip 17 September 2010 album">VA</a>
 									<br>
-									<a href="http://www.komp3.net/albums.html" class="small" title="Download Green Day - Last Of The American Girls (Video 2010) album">Last Of The Ameri..</a>
+									<a href="http://www.komp3.net/albums.html" class="small" title="Download VA - House Vip 17 September 2010 album">House Vip 17 Sept..</a>
 										<br>
-										<a href="http://www.komp3.net/albums.html" class="small" title="Download Green Day - Last Of The American Girls (Video 2010) album"><img src="http://web.tiscali.it/filemediaxtractor/albumingz/Green Day - Last Of The American Girls (Video 2010).jpg" width="95px" height="95px" alt="Download Green Day - Last Of The American Girls (Video 2010) album mp3" border="0"></a>									
+										<a href="http://www.komp3.net/albums.html" class="small" title="Download VA - House Vip 17 September 2010 album"><img src="http://web.tiscali.it/filemediaxtractor/albumingz/VA - House Vip 20 March 2010.jpg" width="95px" height="95px" alt="Download VA - House Vip 17 September 2010 album mp3" border="0"></a>									
 									<br>
-									2010-06-26
+									2010-09-21
 								</div>
 								<div class="latest_albums_album_holder_jos"></div>							
 							</div>										
@@ -109,13 +105,13 @@
 							<div class="latest_albums_album_holder">
 								<div class="latest_albums_album_holder_sus"></div>
 								<div class="latest_albums_album_holder_content small">
-									<a href="http://www.komp3.net/albums.html" class="normal bold" title="Download VA - Trance Megamix the Rebirth Vol 2 2010 album">VA</a>
+									<a href="http://www.komp3.net/albums.html" class="normal bold" title="Download VA - Ultimate Woman 2010 - 3 CDs album">VA</a>
 									<br>
-									<a href="http://www.komp3.net/albums.html" class="small" title="Download VA - Trance Megamix the Rebirth Vol 2 2010 album">Trance Megamix th..</a>
+									<a href="http://www.komp3.net/albums.html" class="small" title="Download VA - Ultimate Woman 2010 - 3 CDs album">Ultimate Woman 20..</a>
 										<br>
-										<a href="http://www.komp3.net/albums.html" class="small" title="Download VA - Trance Megamix the Rebirth Vol 2 2010 album"><img src="http://web.tiscali.it/filemediaxtractor/albumingz/VA - Trance Megamix the Rebirth Vol 2 2010.jpg" width="95px" height="95px" alt="Download VA - Trance Megamix the Rebirth Vol 2 2010 album mp3" border="0"></a>									
+										<a href="http://www.komp3.net/albums.html" class="small" title="Download VA - Ultimate Woman 2010 - 3 CDs album"><img src="http://web.tiscali.it/filemediaxtractor/albumingz/VA - Ultimate Woman 2010 - 3 CDs.jpg" width="95px" height="95px" alt="Download VA - Ultimate Woman 2010 - 3 CDs album mp3" border="0"></a>									
 									<br>
-									2010-06-26
+									2010-09-21
 								</div>
 								<div class="latest_albums_album_holder_jos"></div>							
 							</div>										
@@ -123,13 +119,13 @@
 							<div class="latest_albums_album_holder" style="margin-right:0px;">
 								<div class="latest_albums_album_holder_sus"></div>
 								<div class="latest_albums_album_holder_content small">
-									<a href="http://www.komp3.net/albums.html" class="normal bold" title="Download Black Eyed Peas - My Humps (Official Video) album">Black Eyed Peas</a>
+									<a href="http://www.komp3.net/albums.html" class="normal bold" title="Download VA - Trance In Motion Vol 65 2010 album">VA</a>
 									<br>
-									<a href="http://www.komp3.net/albums.html" class="small" title="Download Black Eyed Peas - My Humps (Official Video) album">My Humps (Officia..</a>
+									<a href="http://www.komp3.net/albums.html" class="small" title="Download VA - Trance In Motion Vol 65 2010 album">Trance In Motion ..</a>
 										<br>
-										<a href="http://www.komp3.net/albums.html" class="small" title="Download Black Eyed Peas - My Humps (Official Video) album"><img src="http://web.tiscali.it/filemediaxtractor/albumingz/Black Eyed Peas - My Humps (Official Video).jpg" width="95px" height="95px" alt="Download Black Eyed Peas - My Humps (Official Video) album mp3" border="0"></a>									
+										<a href="http://www.komp3.net/albums.html" class="small" title="Download VA - Trance In Motion Vol 65 2010 album"><img src="http://web.tiscali.it/filemediaxtractor/albumingz/VA - Trance In Motion Vol 65 2010.jpg" width="95px" height="95px" alt="Download VA - Trance In Motion Vol 65 2010 album mp3" border="0"></a>									
 									<br>
-									2010-06-26
+									2010-09-21
 								</div>
 								<div class="latest_albums_album_holder_jos"></div>							
 							</div>										
@@ -138,7 +134,11 @@
 			<!-- LATEST ALBUMS -->					
 		</div>			
 
-	</div>		
+	</div>
+	<div class="liniutza_sus"></div>
+	<div class="banner_728">
+		<iframe src="http://www.komp3.net/banners/728x90.html" width="728" height="90" scrolling="no" frameborder="0"></iframe>
+	</div>
 	<div class="liniutza_jos"></div><div class="rightcontent" style="width:600px;">
 	<div class="banner_468_center">
 		<div class="banner_468_holder">
@@ -189,13 +189,8 @@
 		</div>			
 	</div>					
 	</div><div class="leftbar" style="width:170px;">
-<div style="margin-top:5px; font-size:3px;">&nbsp;</div>
-<div class="leftbar_box">
-	
-		 <iframe name="SkyScraperKOmp3" width="120" height="600" src="http://www.komp3.net/banners/120x600.html" frameborder="0" scrolling="no"></iframe>
-		
-        </div>					
-	</div><script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+             <iframe name="SkyScraperKOmp3" width="160" height="600" src="http://www.komp3.net/banners/120x600.html" frameborder="0" scrolling="no" style="padding:5px 0 5px 5px;"></iframe>
+		</div><script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-318298-2";
@@ -248,9 +243,7 @@ src="http://e1.extreme-dm.com/s10.g?login=nashu3kk&amp;j=n&amp;jv=n"/>
 			<a href="http://www.google.com/ig/add?feedurl=http://www.komp3.net/content/rss/rss-latest.xml"><img src="http://www.komp3.net/images/blogs/add.gif" width="104" height="17" alt="[Subscribe in Google Reader or Google Homepage]" border="0"></a><br>
 			<a href="http://del.icio.us/post?&amp;url=http://www.komp3.net/content/rss/rss-latest.xml&amp;title=Latest MP3 Albums on KOmp3.net" target="blank"><img src="http://www.komp3.net/images/blogs/delicious.gif" width="80" height="15" border="0"></a>
 			<a href="http://www.spurl.net/spurl.php?title=Latest MP3 Albums on KOmp3.net&amp;url=http://www.komp3.net/content/rss/rss-latest.xml" target="blank"><img src="http://www.komp3.net/images/blogs/spurl.png" width="80" height="15" border="0"></a>
-			<a href="http://www.furl.net/storeIt.jsp?u=http://www.komp3.net/content/rss/rss-latest.xml&amp;t=Latest MP3 Albums on KOmp3.net" target="blank"><img src="http://www.komp3.net/images/blogs/furl.png" width="80" height="15" border="0"></a><br>
-			<a href="http://e-mp3s.eu" target="_blank">Mp3 Download</a><br>
-
+			<a href="http://www.furl.net/storeIt.jsp?u=http://www.komp3.net/content/rss/rss-latest.xml&amp;t=Latest MP3 Albums on KOmp3.net" target="blank"><img src="http://www.komp3.net/images/blogs/furl.png" width="80" height="15" border="0"></a>
 	   </p>
 	</div>	
 </div>
