--- a/v/ve/ver/verifone.com.html
+++ b/v/ve/ver/verifone.com.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the verifone.com privacy policy that was archived on 2009-03-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090323062901id_/http%3A//www.verifone.com/about-us/legal--privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the verifone.com privacy policy that was archived on 2010-09-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100921135033id_/http%3A//www.verifone.com/about-us/legal--privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
-  <title>VeriFone Official Site | Secure payment solutions for credit &amp; debit cards, EMV, contactless, &amp; NFC.</title>
+  <title>Legal and Privacy Policy - VeriFone</title>
   <meta name="description" content="VeriFone is a global leader in secure electronic payment technologies. We provide solutions, services, and expertise that enable electronic payment transactions and value-added services at the point of sale.">
   <meta name="keywords" content="wireless payment solutions, credit card payment, payment security, pay at the table, multi-lane retail payment system, point of sale system, wireless pos, mobile payment devices, contactless and smart card payment systems">
 
@@ -15,11 +15,97 @@
 
 <link type="text/css" rel="stylesheet" media="all" href="/css/stylesheet.css">  
 
+
 <link rel="stylesheet" href="/lightbox/screen.css" media="screen,projection" type="text/css">
 <link rel="stylesheet" href="/lightbox/lightbox.css" media="screen,projection" type="text/css">
 <script src="/lightbox/prototype.js"></script>
 <script src="/lightbox/lightbox.js"></script>
- 
+
+    <script type="text/javascript" src="/highslide/highslide-full.js"></script>
+    <script type="text/javascript" src="/highslide/swfobject.js"></script>
+    <link rel="stylesheet" type="text/css" href="/highslide/highslide.css">
+    <!--[if IE 7]>
+    <link rel="stylesheet" type="text/css" href="/highslide/highslide-ie6.css" />
+    <link rel="stylesheet" type="text/css" href="/css/ie.css" />  
+    <![endif]-->
+
+    <style>
+//    .highslide-html-content { width: 400px; height: 360px;}
+    .highslide-controls li { background-image:none;}
+    .highslide-container { text-align:left;}
+
+    </style>
+    <script type="text/javascript">
+      hs.graphicsDir = '/highslide/graphics/';
+      hs.outlineType = 'rounded-white';
+      hs.wrapperClassName = 'borderless';
+      hs.dimmingOpacity = 0.75;
+      //hs.align = 'center';
+      hs.transitions = ['expand', 'crossfade'];
+      //hs.registerOverlay({
+      //  html: '<div class="closebutton" onclick="return hs.close(this)" title="Close"></div>',
+      //  position: 'top right',
+      //  fade: 2 // fading the semi-transparent overlay looks bad in IE
+      //});
+      if (hs.registerOverlay) {
+        // The white controlbar overlay
+        hs.registerOverlay({
+          thumbnailId: 'thumb3',
+          overlayId: 'controlbar',
+          position: 'top right',
+          hideOnMouseOut: true
+        });
+	// The simple semitransparent close button overlay
+        hs.registerOverlay({
+          thumbnailId: 'thumb2',
+          html: '<div http://www.verifone.com/umbraco/images/tray/indstillinger.gif class="closebutton"	onclick="return hs.close(this)" title="Close"></div>',
+          position: 'top right',
+          fade: 2 // fading the semi-transparent overlay looks bad in IE
+        });
+      }
+      hs.showCredits = false;
+      hs.preserveContent = false;
+      if (hs.addEventListener && hs.Outline) hs.addEventListener(window, 'load', function () {
+        new hs.Outline('rounded-white');
+        new hs.Outline('glossy-dark');
+      });
+      var galleryOptions = {
+        //slideshowGroup: 'gallery',
+        wrapperClassName: 'dark',
+        outlineType: 'rounded-white',
+        //align: 'center',
+        transitions: ['expand', 'crossfade'],
+        fadeInOut: true,
+        marginLeft: 100,
+        marginBottom: 80,
+        numberPosition: 'caption'
+      };
+      if (hs.addSlideshow) hs.addSlideshow({
+        slideshowGroup: 'gallery',
+        interval: 5000,
+        repeat: false,
+        //useControls: true,
+        fixedControls: 'fit',
+        overlayOptions: {
+          opacity: .75,
+          position: 'bottom center',
+          hideOnMouseOut: true
+        }
+      });
+      if (hs.addSlideshow) hs.addSlideshow({
+        //slideshowGroup: 'thumb',
+        interval: 5000,
+        repeat: false,
+        useControls: true,
+        fixedControls: 'fit',
+        overlayOptions: {
+          opacity: .75,
+          position: 'bottom center',
+          hideOnMouseOut: true
+        }
+      });
+    </script>
+
 </head>
 
 <body onmouseup="stopScrolling()">
@@ -61,7 +147,17 @@
           <option value="/about-us/north-america.aspx">North America</option>
           <option value="/about-us/europe-middle-east-africa.aspx">Europe, Middle East, Africa</option>
           <option value="/about-us/asia-pacific-rim.aspx">Asia and the Pacific Rim</option>
-          <option value="/about-us/latin-america-caribbean.aspx">Latin America &amp; the Caribbean</option></select></div>
+          <option value="/about-us/latin-america-caribbean.aspx">Latin America &amp; the Caribbean</option>
+          <option value="/china.aspx">China</option>
+          <option value="/espana.aspx">Espana</option>
+          <option value="/france.aspx">France</option>
+          <option value="/germany.aspx">Germany</option>
+          <option value="/italia.aspx">Italia</option>
+          <option value="/korea.aspx">Korea</option>
+          <option value="/poland.aspx">Poland</option>
+          <option value="/portugal.aspx">Portugal</option>
+          <option value="/russia.aspx">Russia</option>
+          <option value="/turkey.aspx">Turkey</option></select></div>
       <div id="WW_Button"><a href="javascript:toggleSlide();"><img src="/images/tab-worldwide-arrows.gif" runat="server" alt="Select a Location Worldwide"></a></div>
     </div>
   </div>
@@ -76,7 +172,9 @@
 </div>
 <div class="MN_Element" id="MNID_Services"><a href="/services.aspx" class="link_Off" id="ServicesHeader" onmouseover="getMenu('Services'); reactivate			('Services');" onmouseout="deactivate('Services');"></a><iframe id="Services" src="/services-menu.aspx" frameborder="0" scrolling="no" style="z-index:83" allowtransparency="true"></iframe>
 </div>
-<div class="MN_Element" id="MNID_About"><span class="Active"><a href="/about-us.aspx" class="link_Off" id="AboutHeader" onmouseover="getMenu('About'); 				  reactivate('About');" onmouseout="deactivate('About');"></a></span><iframe id="About" src="/about-menu.aspx" frameborder="0" scrolling="no" style="z-index:84" allowtransparency="true"></iframe>
+<div class="MN_Element" id="MNID_MediaSolutions"><a href="/media-solutions.aspx" class="link_Off" id="MediaSolutionsHeader" onmouseover="getMenu('MediaSolutions'); 				  reactivate('MediaSolutions');" onmouseout="deactivate('MediaSolutions');"></a><iframe id="MediaSolutions" src="/media-solutions-menu.aspx" frameborder="0" scrolling="no" style="z-index:84" allowtransparency="true"></iframe>
+</div>
+<div class="MN_Element" id="MNID_About"><span class="Active"><a href="/about-us.aspx" class="link_Off" id="AboutHeader" onmouseover="getMenu('About'); 				  reactivate('About');" onmouseout="deactivate('About');"></a></span><iframe id="About" src="/about-menu.aspx" frameborder="0" scrolling="no" style="z-index:85" allowtransparency="true"></iframe>
 </div><script src="/scripts/script_MainNav_Dropdowns.js" type="text/javascript"></script>    
     </div>    
     <!-- -->
@@ -85,9 +183,9 @@
 <!-- TOP NAV ENDS -->
 
 <!-- SUBTEMPLATE -->
-<form name="ctl06" method="post" action="/about-us/legal--privacy.aspx" id="ctl06">
+<form name="ctl07" method="post" action="/about-us/legal--privacy.aspx" id="ctl07">
 <div>
-<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUJOTkzNjk4NjQ4ZGQ5V9dNq4cMEYLKLVIIQbX0dPDsNg==">
+<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUJOTkzNjk4NjQ4ZGSQL560TWCMbCWVhsRit0xul4Y0uQ==">
 </div>
 
 		<table cellpadding="0" cellspacing="0" border="0" width="100%" class="SubTemplateHeightSpacer">
@@ -105,16 +203,53 @@
 
 <!-- LEFT NAV STARTS -->
 <div id="leftNav"><a href="/about-us.aspx"><img src="/images/subnav-aboutUs.gif" alt="About Us"></a><ul>
-    <li class="terNavOn"><a href="/about-us/legal--privacy.aspx">Legal &amp; Privacy</a></li>
+    <li class="
+            terNav2"><a href="/about-us/contact-us.aspx">Contact Us</a></li>
+    <li class="
+            terNav2"><a href="http://ir.verifone.com/phoenix.zhtml?c=187628&amp;p=irol-irhome">Investor Relations</a></li>
+    <li class="
+            terNav2"><a href="http://ir.verifone.com/phoenix.zhtml?c=187628&amp;p=irol-govmanage">Management Team</a></li>
+    <li class="
+            terNav2"><a href="/about-us/press-room.aspx">Press Room</a></li>
+    <li class="
+            terNav2"><a href="/about-us/industry-leadership.aspx">Industry Leadership</a></li>
+    <li class="
+            terNav2"><a href="/about-us/careers.aspx">Careers</a></li>
+    <li class="
+            terNav2"><a href="/about-us/events.aspx">Events</a></li>
+    <li class="
+            terNav2"><a href="/about-us/family-of-companies.aspx">Family of Companies</a></li>
+    <li class="
+            terNav2"><a href="/about-us/partner-programs-overview.aspx">Partner Programs Overview</a></li>
+    <li class="
+            terNav2"><a href="/about-us/north-america.aspx">North America</a></li>
+    <li class="
+            terNav2"><a href="/about-us/latin-america-caribbean.aspx">Latin America/ Caribbean</a></li>
+    <li class="
+            terNav2"><a href="/about-us/asia-pacific-rim.aspx">Asia/ Pacific Rim</a></li>
+    <li class="
+            terNav2"><a href="/about-us/europe-middle-east-africa.aspx">Europe/ Middle East/ Africa</a></li>
+    <li class="
+            terNav2On"><a href="/about-us/legal--privacy.aspx">Legal &amp; Privacy</a></li>
   </ul>
 </div>
 <!-- LEFT NAV ENDS -->
 
  <div id="content">
-  <h1 class="Upper">Legal &amp; Privacy</h1>
-  <div id="content"><p><b><font color="#005398">Privacy Policy</font></b><br>
-</p><p>This document was last updated Sept 18, 2008.</p>
-<p>VeriFone, Inc. and its subsidiaries (collectively "VeriFone" or the "company") are sensitive to privacy issues on the Internet. The company believes it is important that you know how it treats the information it receives about you on the Internet.</p>
+  <h1 class="Upper">Legal &amp; Privacy</h1><h2>A Message from Our Chief Executive Officer<br>
+Doug Bergeron, CEO</h2>
+<p>More than twenty years ago, VeriFone introduced the first check verification and credit authorization device ever utilized by merchants in a commercial setting. Since then, VeriFone has grown to become a global leader in secure electronic payment solutions.  From the beginning, we have been guided by our commitment to ethics in how our employees interact with each other and how we treat our customers, suppliers and partners.</p>
+<p>
+VeriFone maintains a strict <a href="http://ir.verifone.com/phoenix.zhtml?c=187628&amp;p=irol-govConduct" target="_blank">code of business conduct and ethics</a>  – a set of legal and ethical principles that strive to maintain the highest ethical standards wherever VeriFone operates. VeriFone's commitment to its code of ethics starts at the top: directors, executives, employees and consultants are all responsible for being familiar with the code and abiding by it. The code also covers subsidiaries and affiliates of VeriFone. We understand that ethical behavior is an individual responsibility and no code can capture every possible ethical or legal situation, which is why we insist that sound judgment and discretion also be exercised. 
+</p><p>
+We need and encourage all of our employees, customers, suppliers and partners to work with us in upholding the principles in our code. If you have any concerns about questionable or inappropriate behavior, please do not hesitate to report it so we can work to resolve the issue immediately.  VeriFone has established a <a href="https://www.compliance-helpline.com/verifone.jsp" target="_blank">compliance line</a>, a simple and effective way to express concerns regarding any potentially unethical situation involving VeriFone. </p>
+<h2>Compliance Line</h2>
+<p>VeriFone has established a Compliance Line, a simple, effective way to express concerns regarding any potentially unethical situation involving VeriFone.<br><a href="/PDF/legal/VeriFone_Compliance_Line.pdf" target="_blank">View the Complete Compliance Line Details</a> <img src="http://www.verifone.com/Images/icon_pdf.gif" width="16" height="16" align="absbottom"></p>
+<h2>Standard Terms and Conditions</h2>
+<p>The following document covers the terms and conditions for purchases and purchase orders submitted to VeriFone.<br><a href="/PDF/legal/VeriFone_Standard_Ts_and_Cs.pdf" target="_blank">View our Complete Terms and Conditions</a> <img src="http://www.verifone.com/Images/icon_pdf.gif" width="16" height="16" align="absbottom"></p>
+<h2>Privacy Policy</h2>
+<p>This document was last updated Sept 18, 2008.<br>
+VeriFone, Inc. and its subsidiaries (collectively "VeriFone" or the "company") are sensitive to privacy issues on the Internet. The company believes it is important that you know how it treats the information it receives about you on the Internet.</p>
 <p>In general, you can visit VeriFone on the Web without telling the company who you are or revealing any information about yourself. VeriFone's Web servers collect the domain names, not the e-mail addresses, of visitors. This information is aggregated to measure the number of visits, average time spent on the site, pages viewed, etc. VeriFone may use this information to measure the content of its Web site and improve its use.</p>
 <p>There are times, however, when VeriFone will need information from you such as your name and address. You will be notified at the time of collection how the company will use the information. Usually, the personal information VeriFone collects is used only by the company to respond to your inquiry, process an order or allow you to access specific account information.</p>
 <p>VeriFone will disclose your personal information, without notice, if required to do so by law or in the good faith belief that such action is necessary to: (a) conform to the edicts of the law or comply with legal process served on VeriFone or its Web site, or (b) protect and defend the rights or property of VeriFone and its Web site.</p>
@@ -123,23 +258,21 @@
 <p>VeriFone's Web site may contain links to third-party sites. While VeriFone tries to link only to sites that share its high standards and respect for privacy, the company is not responsible for the content or the privacy practices employed by other sites.</p>
 <p>VeriFone will occasionally update this privacy statement. When we do, we will also revise the "last updated" date at the top of this privacy statement.</p>
 
-<p><b><font color="#005398">Legal Notice</font></b><br>
-
-</p><p>Copyright 2008, All rights reserved. VeriFone, the VeriFone logo, NURIT, Omni, PAYware, Secura, SoftPay, Tranz, Verix, VeriShield, V<span class="Superscript">x</span>, VeriCentre and Xplorer are either trademarks or registered trademarks of VeriFone in the United States and/or other countries. The absence of a product or service name or logo from this list does not constitute a waiver of VeriFone's trademark or other intellectual property rights concerning that name or logo. All other trademarks or brand names are the properties of their respective holders. All features and specifications about VeriFone products and services are subject to change without notice.</p>
-<ul>
-Bruce Goldberg<br>
-Corporate Legal Department<br>
-Office (408) 232-7840<br>
-Email: <a href="mailto:bruce_goldberg@verifone.com?subject=VeriFone.com Inquiry">bruce_goldberg@verifone.com</a><br>
-Fax: (408) 232-7841
-</ul>
-<ul>
+<h2>Legal Notice</h2>
+<p>Copyright 2009, All rights reserved. VeriFone, the VeriFone logo, NURIT, Omni, PAYware, Secura, SoftPay, Tranz, Verix, VeriShield, V<span class="Superscript">x</span>, VeriCentre and Xplorer are either trademarks or registered trademarks of VeriFone in the United States and/or other countries. The absence of a product or service name or logo from this list does not constitute a waiver of VeriFone's trademark or other intellectual property rights concerning that name or logo. All other trademarks or brand names are the properties of their respective holders. All features and specifications about VeriFone products and services are subject to change without notice.</p>
 VeriFone, Inc.<br>
 Attn: Legal Department<br>
 2099 Gateway Place, Suite 600<br>
-San Jose, CA 95110-1093
-</ul>
-<p></p></div>
+San Jose, CA 95110-1093<br>
+Fax: (408) 232-7841<p></p>
+
+
+
+<table cellpadding="0" cellspacing="0" border="0" class="TwoThirds">
+    <tbody><tr>
+      <td id="contentAll"></td>
+    </tr>
+  </tbody></table>
 </div>
 		</div>
 <!--CONTENT ENDS -->
@@ -168,12 +301,34 @@ addthis_logo_background = 'ffffff';
 addthis_logo_color      = '000000';
 addthis_brand           = 'VeriFone';
 addthis_options         = 'favorites, email, digg, delicious, technorati, twitter, google, live, newsvine, more';
-</script><div><a href="http://www.addthis.com/bookmark.php" onmouseover="return addthis_open(this, '', '[URL]', '[TITLE]')" onmouseout="addthis_close()" onclick="return addthis_sendto()"><img src="http://s9.addthis.com/button1-share.gif" width="125" height="16" border="0" alt=""></a></div><script type="text/javascript" src="http://s7.addthis.com/js/152/addthis_widget.js"></script><br><span>Copyright © 2009, VeriFone</span></div>
+</script><div><a href="http://www.addthis.com/bookmark.php" onmouseover="return addthis_open(this, '', '[URL]', '[TITLE]')" onmouseout="addthis_close()" onclick="return addthis_sendto()"><img src="http://s9.addthis.com/button1-share.gif" width="125" height="16" border="0" alt=""></a></div><script type="text/javascript" src="http://s7.addthis.com/js/152/addthis_widget.js"></script><br><span>Copyright © 2010, VeriFone Systems, Inc.</span></div>
 <!-- FOOTER ENDS -->
 	</div>
 <!-- Outer content -->
 
 <!-- End Outer content -->
+
+
+<!--Start of Curtis Javascript-->
+
+<!-- include jQuery library -->
+
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+
+
+<!-- include Hover Intent -->
+<script src="http://www.verifone.com/images/taxi/taxi-js/hoverIntent.js" type="text/javascript"></script>
+
+<!-- include Superfish -->
+<script src="http://www.verifone.com/images/taxi/taxi-js/superfish.js" type="text/javascript"></script>
+
+<!-- include Taxi drop down -->
+<script type="text/javascript" src="http://www.verifone.com/images/taxi/taxi-js/taxi-js.js"></script>
+
+
+<!--End of Curtis Javascript-->  
+
+
 
 
 
