teamnames.net (archived on 2010-09-21)
{
  "alexa_rank": 283183,
  "analysis_subcorpus": true,
  "categories": "business;sports",
  "char_count": 2535,
  "classifier_probability": 0.89,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.76,
  "homepage_snapshot_redirected_domain": "teamnames.net",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20101002155202id_/http://www.teamnames.net/",
  "homepage_snapshot_url": "https://web.archive.org/web/20101002155202id_/http%3A//teamnames.net",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "teamnames.net",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100921205408id_/http%3A//www.teamnames.net/privacy-policy",
  "policy_title": "Privacy Policy",
  "policy_url": "teamnames.net/privacy-policy",
  "sha1": "0f39fb6a3a880483005a5372d11a2eee41747072",
  "simhash": 17721691851093319118,
  "simhash_updated": true,
  "site_hostname": "teamnames.net",
  "site_url": "http://teamnames.net",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20100921205408",
  "word_count": 415,
  "year": 2010
}

--- a/t/te/tea/teamnames.net.html
+++ b/t/te/tea/teamnames.net.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the teamnames.net privacy policy that was archived on 2010-06-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100611211821id_/http%3A//www.teamnames.net/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the teamnames.net privacy policy that was archived on 2010-09-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100921205408id_/http%3A//www.teamnames.net/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr"><head>
-<title>Privacy Policy - TeamNames.net</title>
+<title>Privacy Policy</title>
 <meta name="Description" content="TeamNames.net Website Privacy Policy.">
 <meta name="Keywords" content="">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -27,32 +27,9 @@
 <![endif]-->		
 </head>
 <body>
-<div id="headAd">
-	<div class="headSpon">
-    				<script type="text/javascript"><!--
-			google_ad_client = "pub-9459012598607591";
-			/* 04TN-HeadLeader 728x90, created 2/27/09 */
-			google_ad_slot = "2833146188";
-			google_ad_width = 728;
-			google_ad_height = 90;
-			//-->
-			</script>
-			<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-			</script>
-			    </div>
-	<div class="headSpon">
-    				<script type="text/javascript"><!--
-            google_ad_client = "pub-9459012598607591";
-            /* 04TN-HeadLink 200x90, created 2/27/09 */
-            google_ad_slot = "1366984705";
-            google_ad_width = 200;
-            google_ad_height = 90;
-            //-->
-            </script>
-            <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-            </script>
-			    </div>
-</div>
+
+<div id="headAd"></div>
+
 <div id="site">
 	<div id="header">
 		<div id="headTitle">
@@ -93,17 +70,7 @@
 		<div id="navBox">
 			<ul id="nav">
 				<li><a href="/"><span>Home</span></a></li>
-                                    <li id="liShop"><a href="/shop"><span class="arrowd">Online Shop</span></a>
-                        <ul id="ulShop">
-                            <li><a href="/shop/category/custom-sports-clothing/fantasy-team-shirts"><span>Shirts</span></a></li>
-                            <li><a href="/shop/category/custom-sports-clothing/fantasy-team-hoodies"><span>Hoodies</span></a></li>
-                            <li><a href="/shop/category/custom-sports-clothing/fantasy-team-hats"><span>Hats</span></a></li>
-                            <li><a href="/shop/category/custom-sports-clothing/kids-t-shirts"><span>Kids T-Shirts</span></a></li>
-                            <li><a href="/shop/category/custom-sports-clothing/baby-toddler-shirts"><span>Baby &amp; Toddler Shirts</span></a></li>
-                            <li><a href="/shop/category/sports-merchandise-accessories"><span>Fun Stuff &amp; Accessories</span></a></li>
-                        </ul>
-                  	</li>
-									<li id="liFantasy"><a href="/fantasy/browse-fantasy-team-names/all/1"><span class="arrowd">Fantasy Team Names</span></a>
+				<li id="liFantasy"><a href="/fantasy/browse-fantasy-team-names/all/1"><span class="arrowd">Fantasy Team Names</span></a>
 					<ul id="ulFantasy">
 						<li><a href="/fantasy/browse-fantasy-team-names/all/1"><span>Browse Fantasy Team Names</span></a></li>
 						<li><a href="/fantasy/random-team-name-generator"><span>Random Team Name Generator</span></a></li>
@@ -124,7 +91,17 @@
                         <li><a href="/worldwide/soccer/la-liga-team-names"><span>La Liga Team Names</span></a></li>
                     </ul>
                 </li>
-			                  					<li><a href="/account/register"><span>Register</span></a></li>
+                                    <li id="liShop"><a href="/shop"><span class="arrowd">Online Shop</span></a>
+                        <ul id="ulShop">
+                            <li><a href="/shop/category/custom-sports-clothing/fantasy-team-shirts"><span>Shirts</span></a></li>
+                            <li><a href="/shop/category/custom-sports-clothing/fantasy-team-hoodies"><span>Hoodies</span></a></li>
+                            <li><a href="/shop/category/custom-sports-clothing/fantasy-team-hats"><span>Hats</span></a></li>
+                            <li><a href="/shop/category/custom-sports-clothing/kids-t-shirts"><span>Kids T-Shirts</span></a></li>
+                            <li><a href="/shop/category/custom-sports-clothing/baby-toddler-shirts"><span>Baby &amp; Toddler Shirts</span></a></li>
+                            <li><a href="/shop/category/sports-merchandise-accessories"><span>Fun Stuff &amp; Accessories</span></a></li>
+                        </ul>
+                  	</li>
+								                  					<li><a href="/account/register"><span>Register</span></a></li>
 					<li><a rel="nofollow" href="/account/login"><span>Login</span></a></li>
 								</ul>
 		</div>
@@ -217,8 +194,23 @@
 	<div id="footer">
 		<span>© 2006-2010 TeamNames.net - All rights reserved</span>
 	</div>
-	
+    
 </div>
+
+<div id="headSponAbs">
+            <script type="text/javascript"><!--
+        google_ad_client = "pub-9459012598607591";
+        // 04TN-HeadLeader 728x90, created 2/27/09
+        google_ad_slot = "2833146188";
+        google_ad_width = 728;
+        google_ad_height = 90;
+        //-->
+        </script>
+        <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+        </script>
+        </div>
+
+
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
