--- a/m/mo/mon/moneymastersseries.com.html
+++ b/m/mo/mon/moneymastersseries.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the moneymastersseries.com privacy policy that was archived on 2010-04-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100403094312id_/http%3A//www.moneymastersseries.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the moneymastersseries.com privacy policy that was archived on 2010-09-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100921211101id_/http%3A//moneymastersseries.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<meta http-equiv="CONTENT-TYPE" content="text/html; charset=utf-8">
