--- a/p/pe/pee/peets.com.html
+++ b/p/pe/pee/peets.com.html
@@ -1,13 +1,13 @@
-<!--The following is the downloaded HTML source of the peets.com privacy policy that was archived on 2010-06-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100619081523id_/http%3A//www.peets.com/cust/privacy.asp%3Fcm_re%3Dfooter-_-privacy-_-text%26cm_sp%3Dprivacy-_-footer-_-text) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the peets.com privacy policy that was archived on 2010-09-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100921222110id_/http%3A//www.peets.com/cust/privacy.asp%3Fcm_re%3Dfooter-_-privacy-_-text%26cm_sp%3Dprivacy-_-footer-_-text) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-<title>Peet's Coffee &amp; Tea</title>
+<title>Peet's Coffee &amp; Tea 
+</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 
-<meta name="keywords" content="coffee, specialty, gourmet coffee, coffee beans, 
-coffee blends, coffee gifts, tea gifts, tea, tea leaves and bags, herbal, green tea, black tea">
+<meta name="keywords" content="coffee, specialty, gourmet coffee, coffee beans, coffee blends, coffee gifts, tea gifts, tea, tea leaves and bags, herbal, green tea, black tea ">
 
   <meta name="description" content="Discover Peet's Coffee &amp; Tea. Fresh-roasted coffees, hand-selected teas and unique gifts. Peet's unique roasting style results in a rich, complex taste that no other roaster can duplicate. For ultimate freshness, Peet's hand roasts its coffees daily and ships them the same day. Satisfaction guaranteed.">
 
@@ -537,7 +537,7 @@ Berkeley, CA 94712<br>
 
 
  <td colspan="2">
-<a href="http://www.peets.com/peetniks/peetniks.asp?cm_re=hp-_-footer-_-link&amp;cm_sp=peetnik-_-footer-_-image"><img src="/images/footers/peetniks_footer_tumbler.jpg" border="0" height="42" width="778"></a></td> 
+<a href="http://www.peets.com/peetniks/peetniks.asp?cm_re=hp-_-footer-_-link&amp;cm_sp=peetnik-_-footer-_-image"><img src="/images/footers/peetniks_ship_ado_footer.jpg" border="0" height="42" width="778"></a></td> 
 
 
  
