--- a/j/ja/jas/jasonnyback.com.html
+++ b/j/ja/jas/jasonnyback.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the jasonnyback.com privacy policy that was archived on 2010-06-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100612181348id_/http%3A//www.jasonnyback.com/legal/privacypolicy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jasonnyback.com privacy policy that was archived on 2010-09-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100922232919id_/http%3A//jasonnyback.com/legal/privacypolicy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head><meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
 
