--- a/j/ja/jai/jaillust.com.html
+++ b/j/ja/jai/jaillust.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the jaillust.com privacy policy that was archived on 2010-06-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100615172620id_/http%3A//www.jaillust.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jaillust.com privacy policy that was archived on 2010-09-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100922235949id_/http%3A//jaillust.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy policy.</title>
