--- a/l/li/lib/libgig.com.html
+++ b/l/li/lib/libgig.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the libgig.com privacy policy that was archived on 2010-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100620041538id_/http%3A//www.libgig.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the libgig.com privacy policy that was archived on 2010-09-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100923091124id_/http%3A//libgig.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" class="js"><!-- $Id: page.tpl.php 11 2008-02-21 13:24:51Z bill $ --><!-- Tapgig only - has OpenX script - page.tpl.php  2009-06-25 13:24:51Z lmh  --><!-- added Chartbeat head stuff 2009-11-20 lmh --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
