jamiroquai.com (archived on 2010-09-24)
{
  "alexa_rank": 89649,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 2608,
  "classifier_probability": 0.89,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.28,
  "homepage_snapshot_redirected_domain": "jamiroquai.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100924045933id_/http://jamiroquai.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100924045933id_/http%3A//jamiroquai.com",
  "interval": "2010_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "jamiroquai.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100924122157id_/http%3A//jamiroquai.com/home/privacy",
  "policy_title": "Jamiroquai - Official Website / Privacy",
  "policy_url": "jamiroquai.com/home/privacy",
  "sha1": "21524249cb17d7abc889393240bc61c5322f2fe1",
  "simhash": 12685743543684609316,
  "simhash_updated": true,
  "site_hostname": "jamiroquai.com",
  "site_url": "http://jamiroquai.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20100924122157",
  "word_count": 447,
  "year": 2010
}

--- a/j/ja/jam/jamiroquai.com.html
+++ b/j/ja/jam/jamiroquai.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the jamiroquai.com privacy policy that was archived on 2010-01-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100104190720id_/http%3A//www.jamiroquai.com/home/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jamiroquai.com privacy policy that was archived on 2010-09-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100924122157id_/http%3A//jamiroquai.com/home/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	<title>Jamiroquai - Official Website / Privacy</title>
@@ -258,7 +258,7 @@ such data.
                     					<!-- Right column -->
 <div id="flashcontent02"></div>
 					<script type="text/javascript">
-					var so = new SWFObject("http://www.youtube.com/v/evcIPAXPhNY", "Youtube", "530", "370", "8");
+					var so = new SWFObject("http://www.youtube.com/v/Y7uKK_LfsDE", "Youtube", "530", "370", "8");
 					so.addParam("wmode", "transparent");
 					so.write("flashcontent02");
 					</script>
@@ -287,8 +287,6 @@ subscribe = function(act){
 						</div>
 						<input type="hidden" name="subscription_action" value="subscribe">
 					</form>
-					<iframe class="iframe01" frameborder="0" scrolling="no" src="http://spongecell.com/embed/view/jamiroquai/Jamiroquai?calendar_title=Jamiroquai&amp;weeks_displayed=4&amp;show_event_times=0&amp;cell_date_font_size=11px&amp;today_color=%23d3cadc&amp;event_background_color=%23e3dfe8&amp;title_background_color=%23765a8a&amp;title_text_color=%23ffffff&amp;container_background_color=%23ffffff&amp;cell_text_color=%234a4a4a"></iframe>
-
 					<!-- /Right column -->
 
 					<h2 class="type1">Music</h2>
@@ -370,11 +368,8 @@ subscribe = function(act){
 					<h2 class="type1">Profiles</h2>
 					<ul class="profiles clear">
 						<li><a href="http://www.myspace.com/jamiroquai" class="myspace">Myspace</a></li>
-						<li><a href="http://www.virb.com/jamiroquai" class="virb">Virb</a></li>
-						<li><a href="http://jamiroquai.imeem.com/" class="imeem">Imeem</a></li>
 						<li><a href="http://www.youtube.com/jamiroquaivideo" class="youtube">YouTube</a></li>
 						<li><a href="http://www.last.fm/music/Jamiroquai" class="lastfm">Last.fm</a></li>
-						<li><a href="http://www.netvibes.com/jamiroquai" class="netvibes">Netvibes</a></li>
 <li>
 <a style="background:transparent url(http://www.jamiroquai.com/upload/design/ilike_14x14.jpg) no-repeat scroll 0%; margin-left: 1px;" href="http://www.ilike.com/artist/Jamiroquai">iLike</a>
 </li>
@@ -466,6 +461,6 @@ pageTracker._trackPageview();
 </script>
 
 
-<!-- report: general cache not used (0.03705)  (module specific caching in use) -->
-<!-- full page: 0.71476 -->
+<!-- report: general cache not used (0.0383)  (module specific caching in use) -->
+<!-- full page: 0.35553 -->
 </body></html>
