nakedfunny.com (archived on 2010-09-24)
{
  "alexa_rank": 28743,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 9824,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.73,
  "homepage_snapshot_redirected_domain": "nakedfunny.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100924191803id_/http://www.nakedfunny.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100924191803id_/http%3A//nakedfunny.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "nakedfunny.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100924181617id_/http%3A//nakedfunny.com/content/en-privacy",
  "policy_title": "Privacy Policy - Naked and Funny NakedFunny.Com",
  "policy_url": "nakedfunny.com/content/en-privacy",
  "sha1": "13b12c3b29fbf8b4aae668c6999ef6c4fe57e6e7",
  "simhash": 4090353141990447261,
  "simhash_updated": false,
  "site_hostname": "nakedfunny.com",
  "site_url": "http://nakedfunny.com",
  "smog": 15.11,
  "strict_updated": false,
  "timestamp": "20100924181617",
  "word_count": 1627,
  "year": 2010
}

--- a/n/na/nak/nakedfunny.com.html
+++ b/n/na/nak/nakedfunny.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nakedfunny.com privacy policy that was archived on 2009-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091230230833id_/http%3A//nakedfunny.com/content/en-privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nakedfunny.com privacy policy that was archived on 2010-09-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100924181617id_/http%3A//nakedfunny.com/content/en-privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Privacy Policy - Naked and Funny NakedFunny.Com</title>
@@ -132,12 +132,8 @@ pageTracker._trackPageview();
     
 	<tbody><tr valign="top" height="100%">
 <td vaign="top" align="left" width="200px">
-<!-- bof RedTram N4P -->
-<div id="rtn4p.nnebo_4news"><a href="http://ru.redtram.com" style="font-weight:lighter; font-size:11px; color:blue; font-family:verdana;" target="_blank">Loading...</a></div>
-<!-- eof RedTram N4P -->
-
-<!-- pered </body> -->
-<script language="JavaScript" type="text/javascript" src="http://js.ru.redtram.com/n4p/n/a/nakedfunny.com.nnebo_4news.js"></script> </td>	   
+<center>
+<iframe src="http://nakedfunny.com/iframe/get_tiz.php?cols=1&amp;rows=5&amp;bgcolor=000000&amp;acolor=c96706&amp;ahover=c96706&amp;font=Verdana&amp;font_type=Regular&amp;font_size=12&amp;text_dir=2&amp;decoration=none&amp;iborder=ffffff&amp;format=100x100" width="140px" frameborder="0" height="640px" align="center"></iframe></center></td>	   
 
     <td align="center"><br><div align="center" class="t9g"><a href="http://nakedfunny.com/">Home</a> | <a href="http://nakedfunny.com/en/videos/">Video Gallery</a> | <a href="http://nakedfunny.com/index.php?action=g">Photo Gallery</a> |  <a href="http://nakedfunny.com/content/en-terms/">Terms of Service</a> |  <a href="http://nakedfunny.com/content/en-privacy/">Privacy Policy</a> | <a href="http://nakedfunny.com/content/en-en-ads/">Advertise with us</a></div><br>	  <table width="770px" height="100%" border="0" cellspacing="0" cellpadding="0" align="center">
        <tbody><tr valign="top">
@@ -151,12 +147,11 @@ pageTracker._trackPageview();
 	    <table width="100%" border="0" cellspacing="0" cellpadding="0" background="/images/1_LB.gif" style="background-position:bottom left; background-repeat:no-repeat" class="t8w">
          <tbody><tr valign="top">
          <td align="left"><br>
-<!-- bof RedTram N4P -->
-<div id="rtn4p.lenta_dva"><a href="http://ru.redtram.com" style="font-weight:lighter; font-size:11px; color:blue; font-family:verdana;" target="_blank">Loading...</a></div>
-<!-- eof RedTram N4P -->
-
-<!-- pered </body> -->
-<script language="JavaScript" type="text/javascript" src="http://js.ru.redtram.com/n4p/n/a/nakedfunny.com.lenta_dva.js"></script>
+<script type="text/javascript">
+teasernet_blockid = 163128;
+teasernet_padid = 53283;
+</script>
+<script type="text/javascript" src="http://comunicazio.com/block.js"></script>
 
 <table width="95%" align="center" border="0" id="main-table"><tbody><tr><td>
 <p class="western" style="margin-bottom: 0.19in;"><font color="#ffffff"><strong>Privacy Policy</strong></font></p>
@@ -197,14 +192,18 @@ pageTracker._trackPageview();
          </tr>
         </tbody></table>
 <br>
-	   </td>
+<script type="text/javascript">
+teasernet_blockid = 163272;
+teasernet_padid = 53283;
+</script>
+<script type="text/javascript" src="http://teaservizio.com/block.js"></script>	   </td>
    
 	   <td width="20px">&nbsp;</td>
        </tr>
       </tbody></table>
 	</td>
 <td width="200px" valign="top" align="right">
-<center><iframe src="http://nakedfunny.com/iframe/get_tiz.php?cols=1&amp;rows=5&amp;bgcolor=000000&amp;acolor=c96706&amp;ahover=c96706&amp;font=Verdana&amp;font_type=Regular&amp;font_size=12&amp;text_dir=2&amp;decoration=none&amp;iborder=ffffff&amp;format=100x100" width="140px" frameborder="0" height="640px" align="center"></iframe></center> </td>
+ </td>
     </tr>
 	
  <!-- bot -->
