grattan.co.uk (archived on 2010-09-24)
{
  "alexa_rank": 98880,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 2525,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.37,
  "homepage_snapshot_redirected_domain": "grattan.co.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20101002100104id_/http://www.grattan.co.uk/",
  "homepage_snapshot_url": "https://web.archive.org/web/20101002100104id_/http%3A//grattan.co.uk",
  "interval": "2010_B",
  "link_text": "privacy policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "grattan.co.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100924185400id_/http%3A//www.grattan.co.uk/Web/main/help/question.asp%3Fqid%3D59",
  "policy_title": "What is your privacy policy? - Grattan Help",
  "policy_url": "grattan.co.uk/Web/main/help/question.asp?qid=59",
  "sha1": "56294d4613e0ff133736da433c180431bac92f01",
  "simhash": 12059476860173951741,
  "simhash_updated": false,
  "site_hostname": "grattan.co.uk",
  "site_url": "http://grattan.co.uk",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20100924185400",
  "word_count": 406,
  "year": 2010
}

--- a/g/gr/gra/grattan.co.uk.html
+++ b/g/gr/gra/grattan.co.uk.html
@@ -1,10 +1,11 @@
-<!--The following is the downloaded HTML source of the grattan.co.uk privacy policy that was archived on 2010-05-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100529023632id_/http%3A//www.grattan.co.uk/Web/main/help/question.asp%3Fqid%3D59) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the grattan.co.uk privacy policy that was archived on 2010-09-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100924185400id_/http%3A//www.grattan.co.uk/Web/main/help/question.asp%3Fqid%3D59) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	<title>What is your privacy policy? - Grattan Help</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="description" content="Help on using the Grattan website - Privacy : What is your privacy policy?">
+	<meta name="robots" content="noindex, nofollow">
 	<link rel="stylesheet" type="text/css" media="all" href="styles/master.css">
 	<link rel="stylesheet" type="text/css" media="all" href="themes/grattan/styles.css">
 	<link rel="stylesheet" type="text/css" media="print" href="styles/print.css">
@@ -78,7 +79,7 @@ We will automatically collect information such as your browser IP address to mak
 		<h2>Other questions in this section:</h2>
 			<ul id="ulQuestions">
 
-				<li><a href="question.asp?qid=58">What is your data protection policy?</a></li>
+				<li><a href="question.asp?qid=1176">What is your data protection policy?</a></li>
 
 			</ul>
 
