umcu.org (archived on 2010-09-25)
{
  "alexa_rank": 378601,
  "analysis_subcorpus": true,
  "categories": "business;economyandfinance",
  "char_count": 5137,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.92,
  "homepage_snapshot_redirected_domain": "umcu.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20101002000537id_/http://www.umcu.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20101002000537id_/http%3A//umcu.org",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "umcu.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100925091714id_/http%3A//www.umcu.org/about/privacypolicy.html",
  "policy_title": "University of Michigan Credit Union",
  "policy_url": "umcu.org/about/privacypolicy.html",
  "sha1": "2588ef409a7221d94d1f1c2dce2af7029a4b8438",
  "simhash": 15507249284263858122,
  "simhash_updated": true,
  "site_hostname": "umcu.org",
  "site_url": "http://umcu.org",
  "smog": 15.6,
  "strict_updated": true,
  "timestamp": "20100925091714",
  "word_count": 797,
  "year": 2010
}

--- a/u/um/umc/umcu.org.html
+++ b/u/um/umc/umcu.org.html
@@ -1,22 +1,32 @@
-<!--The following is the downloaded HTML source of the umcu.org privacy policy that was archived on 2010-06-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100612210414id_/http%3A//umcu.org/about/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the umcu.org privacy policy that was archived on 2010-09-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100925091714id_/http%3A//www.umcu.org/about/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <!-------------	META DATA ------------->
+
+
 <title>University of Michigan Credit Union</title>
+
 
 <meta http-equiv="Content-type" content="text/html; charset=iso-8859-1">
 <meta http-equiv="Content-Language" content="en-us">
 
 <link rel="stylesheet" href="/global.css" type="text/css">
 <script type="text/javascript" src="/nav.js"></script>
+<link href="http://www.umcu.org/favicon.ico" rel="icon" type="image/x-icon">
+<link href="http://www.umcu.org/favicon.ico" rel="shortcut icon">
+
 
 <script type="text/javascript">
 	var node_level_1 = "about_umcu";
 	var node_level_2 = "privacy_policy";
 	var node_level_3 = "";
-</script>
-</head>
+</script></head>
+
+
+
+
+
 <body oncontextmenu="return false">
 <!-------------	MASTHEAD ------------->
 <div id="wrapper">
@@ -489,7 +499,7 @@ if(node_level_1 == "savings")	{
 		document.write('<li ');if(node_level_3=="holiday_savings")document.write('class="nav2tab"');document.write('><a href="/savings/holidayaccount.html">Holiday Savings</a></li>');
 		document.write('</ul>');
 			
-	} else 	document.write('<li><a href="/savings/index.html">Regular Savings</a></li>'); // draw inactive	
+	} else 	document.write('<li><a href="/savings/savings.html">Regular Savings</a></li>'); // draw inactive	
 
    // draw expanded
 
@@ -665,7 +675,7 @@ if(node_level_1 == "loans_credit_cards")	{
 		document.write('<a href="/loans/linesofcredit/index.html">Lines of Credit</a></li>');
 	
 		document.write('<ul>');
-		document.write('<li ');if(node_level_3=="open_end_revolving")document.write('class="nav2tab"');document.write('><a href="/loans/linesofcredit/openendrevolving.html">Open End Revolving</a></li>');
+		document.write('<li ');if(node_level_3=="revolving_credit_loan")document.write('class="nav2tab"');document.write('><a href="/loans/linesofcredit/revolvingcreditloan.html">Revolving Credit Loan</a></li>');
 		document.write('<li ');if(node_level_3=="visa_home_equity")document.write('class="nav2tab"');document.write('><a href="/loans/linesofcredit/visahomeequity.html">Visa Home Equity</a></li>');		
 		document.write('</ul>');
 	} else 	document.write('<li><a href="/loans/linesofcredit/index.html">Lines of Credit</a></li>'); // draw inactive
@@ -706,7 +716,7 @@ if(node_level_1 == "loans_credit_cards")	{
 		document.write('<li ');if(node_level_3=="online_application")document.write('class="nav2tab"');document.write('><a href="/loans/apply/applyonline.html">Online Application</a></li>');
 		document.write('<li ');if(node_level_3=="mail_or_fax_application")document.write('class="nav2tab"');document.write('><a href="/loans/apply/Loan_Application.pdf">Mail or Fax Application</a></li>');
 		document.write('<li ');if(node_level_3=="by_phone")document.write('class="nav2tab"');document.write('><a href="/loans/apply/phone.html">By Phone</a></li>');
-		document.write('<li ');if(node_level_3=="credit_score")document.write('class="nav2tab"');document.write('><a href="/loans/apply/creditscore.html">Credit Score</a></li>');
+		document.write('<li ');if(node_level_3=="visa_application/disclosure")document.write('class="nav2tab"');document.write('><a href="/loans/apply/Visa Application-Disclosure.pdf">Visa Application/Disclosure</a></li>');
 		document.write('</ul>');
 	} else document.write('<li><a href="/loans/apply/index.html">Apply for a Loan</a></li>'); // draw inactive
 
@@ -978,7 +988,7 @@ if(node_level_1 == "about_umcu")	 {
 		document.write('<ul>');
 		document.write('<li ');if(node_level_3=="service_centers")document.write('class="nav2tab"');document.write('><a href="/about/locations/servicecenters.html">Service Centers</a></li>');		
 		document.write('<li ');if(node_level_3=="umcu_atms")document.write('class="nav2tab"');document.write('><a href="/about/locations/umcuatms.html">ATMs</a></li>');
-		document.write('<li ');if(node_level_3=="map")document.write('class="nav2tab"');document.write('><a href="/about/locations/branch&ATMdirectory.pdf">Map (PDF)</a></li>');
+		document.write('<li ');if(node_level_3=="map")document.write('class="nav2tab"');document.write('><a href="/about/locations/Branch&ATMdirectory2010.pdf">Map (PDF)</a></li>');
 		document.write('</ul>');
 	} else 	document.write('<li><a href="/about/locations/index.html">Locations</a></li>'); // draw inactive
 
